--- a/po/wesnoth-ei/de.po
+++ b/po/wesnoth-ei/de.po
@@ -5,9 +5,9 @@ msgid ""
 msgstr ""
 "Project-Id-Version: Battle for Wesnoth 1.8\n"
 "Report-Msgid-Bugs-To: http://bugs.wesnoth.org/\n"
-"POT-Creation-Date: 2011-11-16 12:43+0100\n"
-"PO-Revision-Date: 2010-04-28 08:43+0200\n"
-"Last-Translator: Gerfried Fuchs <rhonda@deb.at>\n"
+"POT-Creation-Date: 2011-11-23 15:01+0100\n"
+"PO-Revision-Date: 2011-11-30 12:27+0100\n"
+"Last-Translator: Nils Kneuper <crazy-ivanovic  AT gmx  D O  T net>\n"
 "Language-Team: irc://irc.freenode.net/#wesnoth-de\n"
 "Language: \n"
 "MIME-Version: 1.0\n"
@@ -59,9 +59,8 @@ msgstr "Leibgardist"
 
 #. [campaign]: id=Eastern_Invasion
 #: data/campaigns/Eastern_Invasion/_main.cfg:21
-#, fuzzy
 msgid "(Intermediate level, 16 scenarios.)"
-msgstr "(Einstufung: Mittel, 18 Szenarien)"
+msgstr "(Einstufung: Mittel, 16 Szenarien)"
 
 #. [campaign]: id=Eastern_Invasion
 #: data/campaigns/Eastern_Invasion/_main.cfg:21
@@ -589,9 +588,8 @@ msgstr "Mal-Bakral"
 
 #. [objective]: condition=win
 #: data/campaigns/Eastern_Invasion/scenarios/02_The_Escape_Tunnel.cfg:92
-#, fuzzy
 msgid "Gweddry reaches the end of the tunnel"
-msgstr "Erreicht das Ende des Tunnels"
+msgstr "Gweddry erreicht das Ende des Tunnels"
 
 #. [message]: speaker=Gweddry
 #: data/campaigns/Eastern_Invasion/scenarios/02_The_Escape_Tunnel.cfg:121
@@ -610,7 +608,6 @@ msgstr ""
 
 #. [message]: speaker=Gweddry
 #: data/campaigns/Eastern_Invasion/scenarios/02_The_Escape_Tunnel.cfg:129
-#, fuzzy
 msgid "Wait, before we go anywhere — who were those undead?"
 msgstr ""
 "Wartet. Bevor wir weitergehen habe ich eine Frage: Wer waren diese Untoten?"
@@ -695,13 +692,12 @@ msgstr "Wie ihr meint. Ich wünsche euch viel Glück."
 #: data/campaigns/Eastern_Invasion/scenarios/05_Northern_Outpost.cfg:781
 #: data/campaigns/Eastern_Invasion/scenarios/09_Xenophobia.cfg:328
 #: data/campaigns/Eastern_Invasion/scenarios/11_Captured.cfg:532
-#, fuzzy
 msgid ""
 "Wearing this amulet will cause every blow you deal to inflict <i>arcane</i> "
 "damage!"
 msgstr ""
 "Jeder Schlag, den der Träger dieses heiligen Amulettes austeilt, ist "
-"gesegnet. Er kämpft von nun an mit einer arkanen Waffe!"
+"gesegnet. Er kämpft von nun an mit einer <i>arkanen</i> Waffe!"
 
 #. [scenario]: id=05_Northern_Outpost
 #. [scenario]: id=02_The_Escape_Tunnel
@@ -711,9 +707,8 @@ msgstr ""
 #: data/campaigns/Eastern_Invasion/scenarios/05_Northern_Outpost.cfg:782
 #: data/campaigns/Eastern_Invasion/scenarios/09_Xenophobia.cfg:329
 #: data/campaigns/Eastern_Invasion/scenarios/11_Captured.cfg:533
-#, fuzzy
 msgid "holy amulet^Take it"
-msgstr "Heiliges Amulett"
+msgstr "Das Amulett aufnehmen"
 
 #. [scenario]: id=05_Northern_Outpost
 #. [scenario]: id=02_The_Escape_Tunnel
@@ -724,7 +719,7 @@ msgstr "Heiliges Amulett"
 #: data/campaigns/Eastern_Invasion/scenarios/09_Xenophobia.cfg:330
 #: data/campaigns/Eastern_Invasion/scenarios/11_Captured.cfg:534
 msgid "holy amulet^Leave it"
-msgstr ""
+msgstr "Das Amulett liegen lassen"
 
 #. [scenario]: id=05_Northern_Outpost
 #. [scenario]: id=02_The_Escape_Tunnel
@@ -840,7 +835,6 @@ msgstr ""
 
 #. [message]: speaker=Mal-Tar
 #: data/campaigns/Eastern_Invasion/scenarios/03_An_Unexpected_Appearance.cfg:171
-#, fuzzy
 msgid "No!! They’ll kill me!"
 msgstr "Nein!!! Sie werden mich töten!"
 
@@ -851,7 +845,6 @@ msgstr "Das ist dann dein Problem."
 
 #. [message]: speaker=Gweddry
 #: data/campaigns/Eastern_Invasion/scenarios/03_An_Unexpected_Appearance.cfg:179
-#, fuzzy
 msgid ""
 "These undead are toying with us! This adept is weak — we may be able to take "
 "his castle."
@@ -1197,19 +1190,17 @@ msgstr ""
 
 #. [message]: speaker=Mal-Skraat
 #: data/campaigns/Eastern_Invasion/scenarios/04b_The_Undead_Border_Patrol.cfg:177
-#, fuzzy
 msgid "Noo!! I can’t be promoted if they run away!"
 msgstr "Nein!!! Ich werde nie befördert werden, wenn sie wegrennen!"
 
 #. [option]: speaker=Gweddry
 #: data/campaigns/Eastern_Invasion/scenarios/04b_The_Undead_Border_Patrol.cfg:188
-#, fuzzy
 msgid ""
 "You are right. It is foolish to go onward — we must defeat Mal-Skraat and "
 "turn back, going to the Northern Outpost."
 msgstr ""
 "Ihr habt Recht. Es wäre dumm, weiterzugehen. Wir müssen Mal-Skraat besiegen "
-"und umkehren, um dem nördlichen Außenposten beizustehen."
+"und umkehren, um dem nördlichen Außenposten zu erreichen."
 
 #. [message]: speaker=Mal-Skraat
 #: data/campaigns/Eastern_Invasion/scenarios/04b_The_Undead_Border_Patrol.cfg:192
@@ -1235,7 +1226,6 @@ msgstr ""
 
 #. [message]: speaker=Mal-Skraat
 #: data/campaigns/Eastern_Invasion/scenarios/04b_The_Undead_Border_Patrol.cfg:221
-#, fuzzy
 msgid ""
 "Noo!! He will reach Mal-Ravanal’s capital, and I shall be punished for "
 "letting him escape!"
@@ -1329,7 +1319,6 @@ msgstr "Warum? Seid ihr die Gefangenen der Untoten?"
 
 #. [message]: speaker=$freed_prisoner.id
 #: data/campaigns/Eastern_Invasion/scenarios/04c_Mal-Ravanals_Capital.cfg:403
-#, fuzzy
 msgid ""
 "Yes. My allies and I were questing when we were ambushed by undead. The "
 "guard is playing a sick game — whenever one of their warriors dies, one of "
@@ -1584,7 +1573,6 @@ msgstr "Ihr habt also mein Versteck entdeckt. Gut, das wird euer Tod sein!"
 
 #. [message]: speaker=Owaec
 #: data/campaigns/Eastern_Invasion/scenarios/05_Northern_Outpost.cfg:573
-#, fuzzy
 msgid ""
 "That’s the bandit leader! Kill him, and we will have fulfilled our duty!"
 msgstr ""
@@ -1629,7 +1617,6 @@ msgstr ""
 
 #. [message]: speaker=Owaec
 #: data/campaigns/Eastern_Invasion/scenarios/05_Northern_Outpost.cfg:720
-#, fuzzy
 msgid ""
 "There are still these outlaws to take care of — we must continue fighting "
 "here."
@@ -1816,7 +1803,6 @@ msgstr ""
 
 #. [message]: speaker=Owaec
 #: data/campaigns/Eastern_Invasion/scenarios/07a_The_Crossing.cfg:144
-#, fuzzy
 msgid ""
 "Across this river lies the Northlands. If we can get there, we may be able "
 "to get some ogres to help us — but the orcs will definitely attack us before "
@@ -2079,9 +2065,8 @@ msgstr ""
 
 #. [message]: speaker=Prok-Bak
 #: data/campaigns/Eastern_Invasion/scenarios/09_Xenophobia.cfg:155
-#, fuzzy
 msgid "You human! Call us foul, will you?!"
-msgstr "Oh, ihr Menschen! Ihr nennt uns hinterhältig?!?!"
+msgstr "Oh, ihr Menschen! Ihr nennt uns hinterhältig?!?"
 
 #. [message]: speaker=Pelathsil
 #: data/campaigns/Eastern_Invasion/scenarios/09_Xenophobia.cfg:159
@@ -2279,7 +2264,6 @@ msgstr ""
 
 #. [message]: speaker=Gweddry
 #: data/campaigns/Eastern_Invasion/scenarios/10_Lake_Vrug.cfg:148
-#, fuzzy
 msgid ""
 "There is an abandoned castle here. It looks repairable — we should settle "
 "here."
@@ -2441,13 +2425,12 @@ msgstr "Nun, wo ist ihr Anführer? Ich kann ihn nirgends entdecken."
 #. [message]
 #: data/campaigns/Eastern_Invasion/scenarios/11_Captured.cfg:308
 msgid "Uh... "
-msgstr ""
+msgstr "Uh... "
 
 #. [message]
 #: data/campaigns/Eastern_Invasion/scenarios/11_Captured.cfg:308
-#, fuzzy
 msgid "whisper^I dunno. He escaped, I think."
-msgstr "Ähm... (Geflüster)... Keine Ahnung. Ich glaube, er konnte fliehen."
+msgstr "Keine Ahnung. Ich glaube, er konnte fliehen."
 
 #. [message]: speaker=King Dra-Nak
 #: data/campaigns/Eastern_Invasion/scenarios/11_Captured.cfg:312
@@ -2555,13 +2538,12 @@ msgstr "Ingenieur"
 
 #. [message]: speaker=Dacyn
 #: data/campaigns/Eastern_Invasion/scenarios/12_Evacuation.cfg:198
-#, fuzzy
 msgid ""
 "All is lost! We have to get out of the Northlands as quickly as possible! "
 "Run for your — what the...?! Who are you?"
 msgstr ""
 "Alles ist verloren! Wir müssen die Nordlande so schnell wie nur möglich "
-"verlassen! Lauft um euer – was zum...?!? Wer seid ihr?"
+"verlassen! Lauft um euer — was zum...?!? Wer seid ihr?"
 
 #. [message]: speaker=Engineer
 #. This is thickly accented English
@@ -2575,7 +2557,6 @@ msgstr ""
 
 #. [message]: speaker=Owaec
 #: data/campaigns/Eastern_Invasion/scenarios/12_Evacuation.cfg:207
-#, fuzzy
 msgid "Why would we want to do that?!"
 msgstr "Warum sollten wir das tun wollen?!?"
 
@@ -2598,7 +2579,6 @@ msgstr ""
 
 #. [message]: speaker=Engineer
 #: data/campaigns/Eastern_Invasion/scenarios/12_Evacuation.cfg:219
-#, fuzzy
 msgid ""
 "I ain’t charging gold — I wants protecshun! Everywhere I go, I see orcs, "
 "undead. ’T’ain’t safe ’round ’ere!"
@@ -2617,16 +2597,15 @@ msgstr ""
 
 #. [message]: speaker=Engineer
 #: data/campaigns/Eastern_Invasion/scenarios/12_Evacuation.cfg:227
-#, fuzzy
 msgid ""
 "Deal. I c’n blow’er up once I get to that signpost ov’r dere. That’s where "
 "my eq’pment is. But ev’ryone not ov’r theah on that side when it blows w’ll "
 "be killed by the orcs fa’ sure!"
 msgstr ""
 "Abgemacht! Ich werde sie in die Luft jagen, doch erst muss ich zu diesem "
-"Schild. Dort liegt meine Ausrüstung. Aber jeder, der nicht auf der südlichen "
-"Seite des Flusses ist, wenn ich sie sprenge, wird sicherlich von den Orks "
-"getötet!"
+"Wegweiser. Dort liegt meine Ausrüstung. Aber jeder, der nicht auf der "
+"südlichen Seite des Flusses ist, wenn ich sie sprenge, wird sicherlich von "
+"den Orks getötet!"
 
 #. [message]: speaker=Engineer
 #: data/campaigns/Eastern_Invasion/scenarios/12_Evacuation.cfg:244
@@ -2640,14 +2619,13 @@ msgstr "Ja, blast sie in die Luft."
 
 #. [message]: speaker=Engineer
 #: data/campaigns/Eastern_Invasion/scenarios/12_Evacuation.cfg:254
-#, fuzzy
 msgid "All right! Blast’n time!"
 msgstr "Nun denn! Es ist Zeit für 'ne zünft'ge Sprengung..."
 
 #. [message]: speaker=narrator
 #: data/campaigns/Eastern_Invasion/scenarios/12_Evacuation.cfg:267
 msgid "<big><i>BOOM!!</i></big>"
-msgstr ""
+msgstr "<big><i>BOOM!!</i></big>"
 
 #. [message]: speaker=Gweddry
 #: data/campaigns/Eastern_Invasion/scenarios/12_Evacuation.cfg:306
@@ -2674,7 +2652,6 @@ msgstr "Nein, wartet noch ein wenig."
 
 #. [message]: speaker=Engineer
 #: data/campaigns/Eastern_Invasion/scenarios/12_Evacuation.cfg:326
-#, fuzzy
 msgid "Neh? A’right then, we’ll wait fa’ later, eh?"
 msgstr "Nö? Gut, dann warten wir eben bis später..."
 
@@ -2802,13 +2779,12 @@ msgstr "Khrakrahs"
 
 #. [message]: speaker=Owaec
 #: data/campaigns/Eastern_Invasion/scenarios/13_The_Drowned_Plains.cfg:390
-#, fuzzy
 msgid ""
 "Now, we have reached the Horse Plains, the fair homeland of my people. They "
 "may be able to help us in—"
 msgstr ""
 "Wir haben nun die Ebene der Pferde, meine unbescholtene Heimat, erreicht. "
-"Vielleicht sind meine Verwandten in der Lage uns zu–"
+"Vielleicht sind meine Verwandten in der Lage uns zu—"
 
 #. [message]: speaker=Owaec
 #: data/campaigns/Eastern_Invasion/scenarios/13_The_Drowned_Plains.cfg:394
@@ -2843,7 +2819,6 @@ msgstr "Finnnndnnnn... nieederrrrmähnnnn... tötnnnnnn..."
 
 #. [message]: speaker=Gweddry
 #: data/campaigns/Eastern_Invasion/scenarios/13_The_Drowned_Plains.cfg:414
-#, fuzzy
 msgid "What is that sound?!"
 msgstr "Was war das für ein Geräusch?!?"
 
@@ -2966,7 +2941,6 @@ msgstr ""
 
 #. [part]
 #: data/campaigns/Eastern_Invasion/scenarios/15_The_Council.cfg:28
-#, fuzzy
 msgid ""
 "The greatest seer in the land, Galdren, foresaw that some day, some day "
 "soon, a great evil would spread over the land. The king, naturally, was "
@@ -3254,7 +3228,6 @@ msgstr ""
 
 #. [message]: speaker=Messenger of Doom
 #: data/campaigns/Eastern_Invasion/scenarios/16_Weldyn_under_Attack.cfg:282
-#, fuzzy
 msgid ""
 "He says: <i>“Well done; you have defeated some of my less powerful captains, "
 "and a small fraction of my horde. Were I to bring the whole might of my "
@@ -3266,7 +3239,7 @@ msgid ""
 "behind the lines in safety while others braver than you fought and died in "
 "your name.”</i>"
 msgstr ""
-"Er sagt: »Gute Arbeit; Ihr habt einige meiner schwächeren Befehlshaber "
+"Er sagt: <i>»Gute Arbeit; Ihr habt einige meiner schwächeren Befehlshaber "
 "getötet, genau wie einen kleinen Bruchteil meiner Horde. Würde ich die "
 "gesamte Macht meiner fürchterlichen Legionen aufbringen, würde ich euch "
 "zermalmen wie ein Insekt. Doch ich will einen Sieg, der die mir innewohnende "
@@ -3275,7 +3248,7 @@ msgstr ""
 "Feigling! Die Barden mögen eure Siege gegen meine Anführer besingen, doch in "
 "Wirklichkeit sind andere, die mutiger sind als ihr, in eurem Namen in die "
 "Schlacht gezogen und dort gefallen, während ihr euch feige hinter euren "
-"Linien versteckt habt.«"
+"Linien versteckt habt.«</i>"
 
 #. [message]: speaker=Gweddry
 #: data/campaigns/Eastern_Invasion/scenarios/16_Weldyn_under_Attack.cfg:286
@@ -3352,7 +3325,6 @@ msgstr ""
 
 #. [option]: speaker=Gweddry
 #: data/campaigns/Eastern_Invasion/scenarios/16_Weldyn_under_Attack.cfg:316
-#, fuzzy
 msgid ""
 "I will accept this challenge. By your own master’s terms, that proves I am "
 "no coward."
@@ -3409,12 +3381,11 @@ msgstr ""
 
 #. [message]: speaker=Gweddry
 #: data/campaigns/Eastern_Invasion/scenarios/17a_The_Duel.cfg:142
-#, fuzzy
 msgid ""
 "Wait — what just happened? He called more warriors out of the ground! That’s "
 "not allowed!"
 msgstr ""
-"Wartet – was war denn das? Er hat aus dem Boden weitere Kämpfer "
+"Wartet — was war denn das? Er hat aus dem Boden weitere Kämpfer "
 "herbeigerufen! Das ist nicht gestattet!"
 
 #. [message]: speaker=Mal-Ravanal
@@ -3463,10 +3434,8 @@ msgstr "?"
 
 #. [objective]: condition=lose
 #: data/campaigns/Eastern_Invasion/scenarios/17b_Weldyn_Besieged.cfg:172
-#, fuzzy
-#| msgid "Death of Konrad II"
 msgid "Death of Konrad"
-msgstr "Konrad II. fällt in der Schlacht"
+msgstr "Konrad fällt in der Schlacht"
 
 #. [objective]: condition=lose
 #: data/campaigns/Eastern_Invasion/scenarios/17b_Weldyn_Besieged.cfg:176
@@ -3475,7 +3444,6 @@ msgstr "Ihr lasst einen Feind in eure Festung eindringen"
 
 #. [message]: speaker=Mal-Drakanal
 #: data/campaigns/Eastern_Invasion/scenarios/17b_Weldyn_Besieged.cfg:201
-#, fuzzy
 msgid ""
 "You people are fools! You rejected my master’s offer to duel... very well, "
 "you will <i>all</i> die! And know this; my master is here to enjoy your "
@@ -3485,10 +3453,10 @@ msgid ""
 "names if you can reach us."
 msgstr ""
 "Ihr seid Narren! Ihr habt euch entschieden, das Duell mit meinem Meister "
-"zurückzuweisen... nun werdet ihr alle sterben! Mein Meister ist hier, um "
-"euren Untergang zu genießen. Er fürchtet euch nicht im geringsten, da er "
+"zurückzuweisen... nun werdet ihr <i>alle</i> sterben! Mein Meister ist hier, "
+"um euren Untergang zu genießen. Er fürchtet euch nicht im geringsten, da er "
 "weiß, dass ihr nie in der Lage sein werdet, ihn zu finden und zu töten. Hier "
-"sind sieben von uns und nur EINER ist der wahre Herrscher! Ha ha ha ha! Der "
+"sind sieben von uns und nur einer ist der wahre Herrscher! Ha ha ha ha! Der "
 "Fairness halber verraten wir alle euch unseren Namen, solltet ihr uns denn "
 "erreichen."
 
@@ -3524,15 +3492,13 @@ msgstr "Mal-Larakan"
 
 #. [message]: speaker=Dacyn
 #: data/campaigns/Eastern_Invasion/scenarios/17b_Weldyn_Besieged.cfg:279
-#, fuzzy
 msgid "There he is!"
-msgstr "(geflüstert) Dort ist er!"
+msgstr "Dort ist er!"
 
 #. [message]: speaker=Dacyn
 #: data/campaigns/Eastern_Invasion/scenarios/17b_Weldyn_Besieged.cfg:286
-#, fuzzy
 msgid "That isn’t him..."
-msgstr "(geflüstert) Das ist er nicht..."
+msgstr "Das ist er nicht..."
 
 #. [message]: speaker=second_unit
 #: data/campaigns/Eastern_Invasion/scenarios/17b_Weldyn_Besieged.cfg:298
@@ -3559,17 +3525,15 @@ msgstr ""
 #. [message]: speaker=Konrad
 #: data/campaigns/Eastern_Invasion/scenarios/17b_Weldyn_Besieged.cfg:358
 msgid "The Kingdom of Wesnoth dies with me!"
-msgstr ""
+msgstr "Das Königreich wird mit mir untergehen!"
 
 #. [scenario]: id=18_Epilogue
 #: data/campaigns/Eastern_Invasion/scenarios/18_Epilogue.cfg:4
-#, fuzzy
 msgid "Epilogue"
 msgstr "Epilog"
 
 #. [part]
 #: data/campaigns/Eastern_Invasion/scenarios/18_Epilogue.cfg:20
-#, fuzzy
 msgid ""
 "When Mal-Ravanal fell, the living creatures under his banner broke and fled; "
 "the undead simply collapsed like puppets with their strings cut. As the "
@@ -3583,7 +3547,7 @@ msgstr ""
 "Als Mal-Ravanal letztlich niederging, zerstreuten sich seine lebendigen "
 "Kämpfer in alle Winde und die Untoten brachen zusammen. Während der "
 "Todesschrei des Lichs noch immer nachhallte, erhob sich ein riesiger, "
-"finsterer Schatten aus dem Leichnam und vier düstere Schwaden griffen, "
+"finsterer Schatten aus dem Leichnam und fünf düstere Schwaden griffen, "
 "Fingern gleich, nach dem Himmel.\n"
 "\n"
 "Männer ließen ihre Waffen fallen und Pferde wieherten in Todesangst, als "
@@ -3592,7 +3556,6 @@ msgstr ""
 
 #. [part]
 #: data/campaigns/Eastern_Invasion/scenarios/18_Epilogue.cfg:24
-#, fuzzy
 msgid ""
 "... and then it thinned, and paled, and a breeze from the west dissolved it "
 "in tatters, and the light of day shone once again undiminished on Weldyn."
@@ -3612,7 +3575,6 @@ msgstr ""
 
 #. [message]: speaker=Gweddry
 #: data/campaigns/Eastern_Invasion/scenarios/18_Epilogue.cfg:90
-#, fuzzy
 msgid ""
 "So many months of fighting... I feel as though I am awakening from a long "
 "nightmare."
@@ -3632,13 +3594,12 @@ msgstr ""
 
 #. [message]: speaker=Konrad II
 #: data/campaigns/Eastern_Invasion/scenarios/18_Epilogue.cfg:107
-#, fuzzy
 msgid ""
 "We will be years... perhaps decades... recovering from the ill he has "
 "wrought."
 msgstr ""
 "Wir werden Jahre, möglicherweise gar Jahrzehnte, brauchen, um uns von dem "
-"Bösen, dass er gebracht hat, letztlich vollständig zu befreien."
+"Bösen, dass er gebracht hat, vollständig zu befreien."
 
 #. [message]: speaker=Owaec
 #: data/campaigns/Eastern_Invasion/scenarios/18_Epilogue.cfg:117
@@ -3684,11 +3645,10 @@ msgstr "Herr, wir sind nur unserer Pflicht nachgekommen."
 
 #. [message]: speaker=Konrad II
 #: data/campaigns/Eastern_Invasion/scenarios/18_Epilogue.cfg:157
-#, fuzzy
 msgid "Quite. Now do not interrupt while I am doing mine... Kneel, Owaec."
 msgstr ""
-"Schweigt. Unterbrecht uns nicht, wenn wir die unsrige erfüllen... kniet "
-"nieder, Ritter Owaec."
+"Schweigt. Unterbrecht uns nicht, wenn wir die unsrige erfüllen... Kniet "
+"nieder, Owaec."
 
 #. [message]: speaker=Konrad II
 #: data/campaigns/Eastern_Invasion/scenarios/18_Epilogue.cfg:164
@@ -3710,7 +3670,6 @@ msgstr "Kniet nieder, Gweddry!"
 
 #. [message]: speaker=Konrad II
 #: data/campaigns/Eastern_Invasion/scenarios/18_Epilogue.cfg:199
-#, fuzzy
 msgid "Quite. Now do not interrupt while I am doing mine... Kneel, Gweddry."
 msgstr ""
 "Schweigt. Unterbrecht uns nicht, wenn wir die unsrige erfüllen... Kniet "
@@ -3810,7 +3769,7 @@ msgstr ""
 #: data/campaigns/Eastern_Invasion/utils/abilities.cfg:8
 #: data/campaigns/Eastern_Invasion/utils/abilities.cfg:9
 msgid "shock"
-msgstr ""
+msgstr "Niederschlag"
 
 #. [attacks]: id=shock
 #: data/campaigns/Eastern_Invasion/utils/abilities.cfg:11
@@ -3820,6 +3779,10 @@ msgid ""
 "When this attack is used on offense, the opponent will retaliate with one "
 "less strike than normally, to a minimum of one strike."
 msgstr ""
+"Niederschlag:\n"
+"Wenn dieser Angriff offensiv genutzt wird führt dies dazu, dass der "
+"Angegriffene über einen Gegenschlag weniger verfügt. Allerdings behält der "
+"Gegner zumindest einen Angriff."
 
 #. [message]: speaker=Gweddry
 #: data/campaigns/Eastern_Invasion/utils/deaths.cfg:9
@@ -3833,15 +3796,13 @@ msgstr "Wir sind verloren..."
 
 #. [message]: speaker=Owaec
 #: data/campaigns/Eastern_Invasion/utils/deaths.cfg:37
-#, fuzzy
 msgid "I... must— Argh...!"
 msgstr "Ich... muss... argh."
 
 #. [message]: speaker=Grug
 #: data/campaigns/Eastern_Invasion/utils/deaths.cfg:51
-#, fuzzy
 msgid "Grarrgghh..."
-msgstr "Grarrgg...."
+msgstr "Grarrgghh..."
 
 #. [message]: speaker=Engineer
 #: data/campaigns/Eastern_Invasion/utils/deaths.cfg:62
