--- a/po/wesnoth-nr/de.po
+++ b/po/wesnoth-nr/de.po
@@ -6,9 +6,9 @@ msgid ""
 msgstr ""
 "Project-Id-Version: Battle for Wesnoth 1.9\n"
 "Report-Msgid-Bugs-To: http://bugs.wesnoth.org/\n"
-"POT-Creation-Date: 2011-11-16 12:43+0100\n"
-"PO-Revision-Date: 2011-05-11 19:47+0100\n"
-"Last-Translator: Crommy\n"
+"POT-Creation-Date: 2011-11-23 15:01+0100\n"
+"PO-Revision-Date: 2011-11-30 14:12+0100\n"
+"Last-Translator: Nils Kneuper <crazy-ivanovic  AT gmx  D O  T net>\n"
 "Language-Team: irc://irc.freenode.net/#wesnoth-de\n"
 "Language: \n"
 "MIME-Version: 1.0\n"
@@ -2099,7 +2099,7 @@ msgstr "Hettel"
 #. [side]: type=Death Knight, id=Tervor
 #: data/campaigns/Northern_Rebirth/scenarios/05a_The_Pursuit.cfg:103
 msgid "Tervor"
-msgstr ""
+msgstr "Tervor"
 
 #. [side]: type=Death Knight, id=Author
 #: data/campaigns/Northern_Rebirth/scenarios/05a_The_Pursuit.cfg:127
@@ -3326,19 +3326,14 @@ msgstr "Ich bitte um Entschuldigung. Welches Jahr haben wir überhaupt?"
 
 #. [message]: speaker=Tallin
 #: data/campaigns/Northern_Rebirth/scenarios/05a_The_Pursuit.cfg:2176
-#, fuzzy
-#| msgid "Uh... 534YW..."
 msgid "Uh... 534..."
-msgstr "Ähh… 534 JW…"
+msgstr "Ähh… 534…"
 
 #. [message]: speaker=Abhai
 #: data/campaigns/Northern_Rebirth/scenarios/05a_The_Pursuit.cfg:2180
-#, fuzzy
-#| msgid "Huh?! Can’t be, the last year I remember it was 14,318AD!"
 msgid "Huh?! Can’t be, the last year I remember it was 14,318!"
 msgstr ""
-"Das kann nicht sein! Das letzte Jahr, an das ich mich erinnere, war 14.318 "
-"AD!"
+"Das kann nicht sein! Das letzte Jahr, an das ich mich erinnere, war 14.318!"
 
 #. [message]: speaker=Tallin
 #: data/campaigns/Northern_Rebirth/scenarios/05a_The_Pursuit.cfg:2184
