--- a/po/wesnoth-thot/de.po
+++ b/po/wesnoth-thot/de.po
@@ -5,9 +5,9 @@ msgid ""
 msgstr ""
 "Project-Id-Version: Battle for Wesnoth 1.8\n"
 "Report-Msgid-Bugs-To: http://bugs.wesnoth.org/\n"
-"POT-Creation-Date: 2011-11-16 12:43+0100\n"
-"PO-Revision-Date: 2010-11-08 22:11+0100\n"
-"Last-Translator: Crommy\n"
+"POT-Creation-Date: 2011-11-23 15:01+0100\n"
+"PO-Revision-Date: 2011-11-30 14:13+0100\n"
+"Last-Translator: Nils Kneuper <crazy-ivanovic  AT gmx  D O  T net>\n"
 "Language-Team: Crommy <oli-lange@web.de>\n"
 "Language: \n"
 "MIME-Version: 1.0\n"
@@ -348,7 +348,6 @@ msgstr "Der Hammer von Thursagan?"
 
 #. [message]: speaker=Angarthing_dummy
 #: data/campaigns/The_Hammer_of_Thursagan/scenarios/02_Reclaiming_the_Past.cfg:128
-#, fuzzy
 msgid ""
 "Aye. The very tool with which our greatest runesmith made the Sceptre of "
 "Fire. But it is ancient, far older than Thursagan; he was but the last to "
@@ -2605,16 +2604,11 @@ msgstr ""
 "so dienen sie zwischen den Stämmen oft als Unterhändler."
 
 #: data/campaigns/The_Hammer_of_Thursagan/utils/abilities.cfg:4
-#, fuzzy
-#| msgid ""
-#| "The presence of this unit inspires own units next to it to deal more "
-#| "damage in combat, though this only applies to units of lower or equal "
-#| "level."
 msgid ""
 " The presence of this unit inspires own units next to it to deal more damage "
 "in combat, though this only applies to units of lower or equal level."
 msgstr ""
-"Die Anwesenheit dieser Einheit begeistert befreundete, benachbarte "
+" Die Anwesenheit dieser Einheit begeistert befreundete, benachbarte "
 "Einheiten, so dass diese mehr Schaden verursachen. Die Wirkung tritt nur bei "
 "gleichrangigen oder niederrangigen Einheiten ein."
 
