Updated the Old English translation.

--- a/po/wesnoth/ang@latin.po
+++ b/po/wesnoth/ang@latin.po
@@ -8,7 +8,7 @@ msgstr ""
 "Project-Id-Version: ang@latin\n"
 "Report-Msgid-Bugs-To: http://bugs.wesnoth.org/\n"
 "POT-Creation-Date: 2011-11-23 15:01+0100\n"
-"PO-Revision-Date: 2011-11-10 10:52-0500\n"
+"PO-Revision-Date: 2011-11-30 10:31-0500\n"
 "Last-Translator: Steven Panek (Espreon) <Majora700@gmail.com>\n"
 "Language-Team: Old English <http://wiki.wesnoth.org/OldEnglishTranslation>\n"
 "Language: ang@latin\n"
@@ -486,13 +486,13 @@ msgstr "Niðerlendisc Þeodnes"
 #: data/core/about.cfg:1565
 #, fuzzy
 msgid "English (GB) Translation"
-msgstr "Niƿe Engliscu (GB) Þeodnes"
+msgstr "Niƿe Englisc (GB) Þeodnes"
 
 #. [about]
 #: data/core/about.cfg:1587
 #, fuzzy
 msgid "English (Shaw) Translation"
-msgstr "Niƿe Engliscu (Shaw) Þeodnes"
+msgstr "Niƿe Englisc (Shaw) Þeodnes"
 
 #. [about]
 #: data/core/about.cfg:1611
@@ -1907,7 +1907,7 @@ msgstr ""
 #. [language]
 #: data/english.cfg:48
 msgid "pierce"
-msgstr ""
+msgstr "stice"
 
 #. [language]
 #: data/english.cfg:49
@@ -1927,7 +1927,7 @@ msgstr "ceald"
 #. [language]
 #: data/english.cfg:52
 msgid "arcane"
-msgstr ""
+msgstr "runlic"
 
 #. [server]
 #: data/game_config.cfg:4
@@ -3546,8 +3546,9 @@ msgid "none"
 msgstr "nan"
 
 #: src/gui/dialogs/lobby_player_info.cpp:98
+#, fuzzy
 msgid "In game:"
-msgstr ""
+msgstr "On gamene:"
 
 #: src/gui/dialogs/lobby_player_info.cpp:100
 msgid "(observing)"
