updated Czech translation

--- a/po/wesnoth-multiplayer/cs.po
+++ b/po/wesnoth-multiplayer/cs.po
@@ -1,21 +1,21 @@
 # translation of wesnoth-multiplayer.pot to Czech
 # Czech translations for Battle for Wesnoth package.
 # Český překlad hry Battle for Wesnoth (Bitva o Wesnoth).
-# Copyright (C) 2004 - 2010 Wesnoth development team
+# Copyright (C) 2004 - 2011 Wesnoth development team
 # This file is distributed under the same license as the Battle for Wesnoth package.
 #
 # Czech Wesnoth translation team <wesnoth-cs-l@nospam.buchtovi.cz>,
 #
 # Yeti <yeti@physics.muni.cz> et al, 2004.
 # Oto 'tapik' Buchta <tapik@buchtovi.cz>, 2005 - 2007.
-# Vladimír Slávik <slavik.vladimir@seznam.cz>, 2007 - 2010.
+# Vladimír Slávik <slavik.vladimir@seznam.cz>, 2007 - 2011.
 #
 msgid ""
 msgstr ""
 "Project-Id-Version: Battle for Wesnoth\n"
 "Report-Msgid-Bugs-To: http://bugs.wesnoth.org/\n"
 "POT-Creation-Date: 2011-11-23 15:01+0100\n"
-"PO-Revision-Date: 2011-11-27 12:32+0100\n"
+"PO-Revision-Date: 2011-11-30 16:46+0100\n"
 "Last-Translator: VladimírSlávik <slavik.vladimir@nospam@seznam.cz>\n"
 "Language-Team: Czech <wesnoth-cs-l@nospam.buchtovi.cz>\n"
 "Language: cs\n"
@@ -205,8 +205,9 @@ msgstr ""
 
 #. [multiplayer]: id=multiplayer_Arcanclave_Citadel
 #: data/multiplayer/scenarios/2p_Arcanclave_Citadel.cfg:6
+#, fuzzy
 msgid "2p — Arcanclave Citadel"
-msgstr ""
+msgstr "2p — "
 
 #. [multiplayer]: id=multiplayer_Arcanclave_Citadel
 #: data/multiplayer/scenarios/2p_Arcanclave_Citadel.cfg:7
@@ -768,16 +769,8 @@ msgstr ""
 msgid "2p — Dark Forecast (Survival)"
 msgstr "2p — Temná předpověď (přežití)"
 
-# | msgid ""
-# | "Dark Forecast is a survival scenario for solitaire or two-player team-"
-# | "based play against randomly AI spawned units. Victory is achieved by "
-# | "surviving all enemy waves. During the course of play, the terrain will "
-# | "change based on random weather effects.\n"
-# | "\n"
-# | "Note: You need to use map settings for the scenario to work right."
 #. [multiplayer]: id=multiplayer_2p_Dark_Forecast
 #: data/multiplayer/scenarios/2p_Dark_Forecast.cfg:8
-#, fuzzy
 msgid ""
 "Dark Forecast is a survival scenario for solitaire or two-player team-based "
 "play against randomly-spawned AI units. Victory is achieved by surviving and "
@@ -1157,7 +1150,7 @@ msgstr ""
 #. [unit]: type=Dwarvish Scout, id=Rublok
 #: data/multiplayer/scenarios/2p_Hornshark_Island.cfg:539
 msgid "Rublok"
-msgstr ""
+msgstr "Rublok"
 
 #. [unit]: type=Dwarvish Scout, id=Ulysses Mantyjuuri
 #: data/multiplayer/scenarios/2p_Hornshark_Island.cfg:564
@@ -1172,7 +1165,7 @@ msgstr ""
 #. [unit]: type=Elvish Fighter, id=Claiomh Dubh
 #: data/multiplayer/scenarios/2p_Hornshark_Island.cfg:725
 msgid "Claiomh Dubh"
-msgstr ""
+msgstr "Claiomh Dubh"
 
 #. [unit]: id=Tyxrrn the Dauntless, type=Soulless
 #: data/multiplayer/scenarios/2p_Hornshark_Island.cfg:784
@@ -1230,7 +1223,7 @@ msgstr ""
 #. [effect]: type=arcane
 #: data/multiplayer/scenarios/2p_Silverhead_Crossing.cfg:82
 msgid "evil eye"
-msgstr ""
+msgstr "zlý pohled"
 
 #. [trait]: id=remove_hp
 #: data/multiplayer/scenarios/2p_Sullas_Ruins.cfg:23
@@ -1336,13 +1329,14 @@ msgstr ""
 
 #. [multiplayer]: id=multiplayer_thousand_stings_garrison
 #: data/multiplayer/scenarios/2p_Thousand_Stings_Garrison.cfg:37
+#, fuzzy
 msgid "2p — Thousand Stings Garrison"
-msgstr ""
+msgstr "2p — "
 
 #. [multiplayer]: id=multiplayer_thousand_stings_garrison
 #: data/multiplayer/scenarios/2p_Thousand_Stings_Garrison.cfg:39
 msgid "A strange place. Designed by Doc Paterson"
-msgstr ""
+msgstr "Podivné místo, Návrh Doc pattersona."
 
 #. [side]
 #: data/multiplayer/scenarios/2p_Thousand_Stings_Garrison.cfg:85
