--- a/po/wesnoth-lib/cs.po
+++ b/po/wesnoth-lib/cs.po
@@ -1,21 +1,21 @@
 # translation of wesnoth-lib.pot to Czech
 # Czech translations for Battle for Wesnoth package.
 # Český překlad hry Battle for Wesnoth (Bitva o Wesnoth).
-# Copyright (C) 2004 - 2010 Wesnoth development team
+# Copyright (C) 2004 - 2011 Wesnoth development team
 # This file is distributed under the same license as the Battle for Wesnoth package.
 #
 # Czech Wesnoth translation team <wesnoth-cs-l@nospam.buchtovi.cz>,
 #
 # Yeti <yeti@physics.muni.cz> et al, 2004.
 # Oto 'tapik' Buchta <tapik@buchtovi.cz>, 2005 - 2007.
-# Vladimír Slávik <slavik.vladimir@seznam.cz>, 2007 - 2010.
+# Vladimír Slávik <slavik.vladimir@seznam.cz>, 2007 - 2011.
 #
 msgid ""
 msgstr ""
 "Project-Id-Version: Battle for Wesnoth\n"
 "Report-Msgid-Bugs-To: http://bugs.wesnoth.org/\n"
 "POT-Creation-Date: 2011-11-23 15:01+0100\n"
-"PO-Revision-Date: 2011-11-22 20:20+0100\n"
+"PO-Revision-Date: 2011-11-30 16:50+0100\n"
 "Last-Translator: VladimírSlávik <slavik.vladimir@nospam@seznam.cz>\n"
 "Language-Team: Czech <wesnoth-cs-l@nospam.buchtovi.cz>\n"
 "Language: cs\n"
@@ -142,9 +142,8 @@ msgstr ""
 #. [terrain_type]: id=road
 #: data/core/terrain.cfg:196 data/core/terrain.cfg:206
 #: data/core/terrain.cfg:216
-#, fuzzy
 msgid "Dirt"
-msgstr "Hlína, suchá"
+msgstr "Hlína"
 
 #. [terrain_type]: id=dirt_dark
 #: data/core/terrain.cfg:197
@@ -169,9 +168,8 @@ msgstr "Hlína, suchá"
 #: data/core/terrain.cfg:226 data/core/terrain.cfg:236
 #: data/core/terrain.cfg:246 data/core/terrain.cfg:845
 #: data/core/terrain.cfg:855
-#, fuzzy
 msgid "Road"
-msgstr "Načíst hru"
+msgstr "Cesta"
 
 #. [terrain_type]: id=road
 #: data/core/terrain.cfg:227
@@ -200,9 +198,8 @@ msgstr "Sníh"
 
 #. [terrain_type]: id=desert
 #: data/core/terrain.cfg:282
-#, fuzzy
 msgid "Desert"
-msgstr "Resetovat"
+msgstr "Poušť"
 
 #. [terrain_type]: id=desert
 #: data/core/terrain.cfg:283
@@ -288,12 +285,12 @@ msgstr ""
 #. [terrain_type]: id=water-lilies
 #: data/core/terrain.cfg:427
 msgid "Water Lilies"
-msgstr ""
+msgstr "Lekníny"
 
 #. [terrain_type]: id=water-lilies-flower
 #: data/core/terrain.cfg:437
 msgid "Flowering Water Lilies"
-msgstr ""
+msgstr "Lekníny, kvetoucí"
 
 #. [terrain_type]: id=great_tree
 #. [terrain_type]: id=great_tree_dead
@@ -304,9 +301,8 @@ msgstr "Velký strom"
 
 #. [terrain_type]: id=great_tree_dead
 #: data/core/terrain.cfg:464
-#, fuzzy
 msgid "Dead Great Tree"
-msgstr "Velký strom"
+msgstr "Mrtvý velký strom"
 
 #. [terrain_type]: id=tropical_forest
 #. [terrain_type]: id=pine_forest
@@ -858,19 +854,17 @@ msgstr "Srub, zasněžený"
 #. [terrain_type]: id=igloo
 #: data/core/terrain.cfg:1464
 msgid "Igloo"
-msgstr ""
+msgstr "Iglú"
 
 #. [terrain_type]: id=swamp_village
 #: data/core/terrain.cfg:1479
 msgid "Swamp Village"
 msgstr "Vesnice, bažinná"
 
-# | msgid "Swamp Merfolk Village"
 #. [terrain_type]: id=mermen-village
 #: data/core/terrain.cfg:1492
-#, fuzzy
 msgid "Merfolk Village"
-msgstr "Vesnice, mokřinná mořského lidu"
+msgstr "Vesnice, mořského lidu"
 
 #. [terrain_type]: id=village_overlay
 #: data/core/terrain.cfg:1507
@@ -951,15 +945,13 @@ msgstr "Hrad, zřícený lidský"
 
 #. [terrain_type]: id=sunkenruin
 #: data/core/terrain.cfg:1629
-#, fuzzy
 msgid "Sunken Human Ruin"
-msgstr "Zatopená zřícenina"
+msgstr "Zřícenina, zatopená"
 
 #. [terrain_type]: id=swampruin
 #: data/core/terrain.cfg:1642
-#, fuzzy
 msgid "Swamp Human Ruin"
-msgstr "Propadlá zřícenina"
+msgstr "Zřícenina, lidksé propadlá"
 
 #. [terrain_type]: id=sand_castle
 #: data/core/terrain.cfg:1655
@@ -1040,9 +1032,8 @@ msgstr "Tvrz, trpasličí"
 #. [terrain_type]: id=desert_keep_ruined
 #: data/core/terrain.cfg:1798 data/core/terrain.cfg:1811
 #: data/core/terrain.cfg:1824 data/core/terrain.cfg:1850
-#, fuzzy
 msgid "Ruined Keep"
-msgstr "Tvrz, zřícená pouštní"
+msgstr "Tvrz, zřícená"
 
 #. [terrain_type]: id=ruined_keep
 #: data/core/terrain.cfg:1799
@@ -1096,9 +1087,8 @@ msgstr ""
 #: data/core/terrain.cfg:1968 data/core/terrain.cfg:1980
 #: data/core/terrain.cfg:1992 data/core/terrain.cfg:2006
 #: data/core/terrain.cfg:2017 data/core/terrain.cfg:2029
-#, fuzzy
 msgid "Bridge"
-msgstr "Most, dřevěný"
+msgstr "Most"
 
 #. [terrain_type]: id=bridge
 #. [terrain_type]: id=bridgediag1
@@ -1108,15 +1098,13 @@ msgstr "Most, dřevěný"
 msgid "Wooden Bridge"
 msgstr "Most, dřevěný"
 
-# | msgid "Wooden Bridge"
 #. [terrain_type]: id=rotbridge
 #. [terrain_type]: id=rotbridgediag1
 #. [terrain_type]: id=rotbridgediag2
 #: data/core/terrain.cfg:1931 data/core/terrain.cfg:1943
 #: data/core/terrain.cfg:1955
-#, fuzzy
 msgid "Rotting Bridge"
-msgstr "Most, dřevěný"
+msgstr "Most, dřevěný hnijící"
 
 #. [terrain_type]: id=stone_bridge
 #: data/core/terrain.cfg:1969 data/core/terrain.cfg:1981
@@ -2045,15 +2033,13 @@ msgstr "Vyhodit/zakázat"
 
 #. [label]: id=side_title
 #: data/gui/default/window/mp_change_control.cfg:21
-#, fuzzy
 msgid "Side"
-msgstr "Velikost:"
+msgstr "Strana"
 
 #. [label]: id=nick_title
 #: data/gui/default/window/mp_change_control.cfg:73
-#, fuzzy
 msgid "Nickname"
-msgstr "Vyhodit"
+msgstr "Přezdívka"
 
 #. [label]
 #: data/gui/default/window/mp_change_control.cfg:194
@@ -2486,11 +2472,12 @@ msgstr "hráč"
 
 #: src/game_preferences.cpp:777
 msgid "%H:%M"
-msgstr ""
+msgstr "%H:%M"
 
+# formát času pro 2x12 + AM/PM
 #: src/game_preferences.cpp:780
 msgid "%I:%M %p"
-msgstr ""
+msgstr "%I:%M %p"
 
 #: src/game_preferences_display.cpp:173
 msgid "Full screen"
@@ -2933,14 +2920,12 @@ msgid "no"
 msgstr "ne"
 
 #: src/game_preferences_display.cpp:1119
-#, fuzzy
 msgid "friend"
-msgstr "Přátelé"
+msgstr "přítel"
 
 #: src/game_preferences_display.cpp:1125
-#, fuzzy
 msgid "ignored"
-msgstr "Bez ignorovaných"
+msgstr "otrapa"
 
 #: src/game_preferences_display.cpp:1129
 msgid "(empty list)"
@@ -2993,15 +2978,13 @@ msgstr "Obdélník se nevejde na plátno."
 
 #: src/gui/auxiliary/canvas.cpp:868 src/gui/auxiliary/canvas.cpp:873
 #: src/gui/auxiliary/canvas.cpp:878 src/gui/auxiliary/canvas.cpp:884
-#, fuzzy
 msgid "Circle doesn't fit on canvas."
-msgstr "Čára se nevejde na plátno."
+msgstr "Kruh se nevejde na plátno."
 
 #: src/gui/auxiliary/canvas.cpp:1070 src/gui/auxiliary/canvas.cpp:1077
 #: src/gui/auxiliary/canvas.cpp:1087 src/gui/auxiliary/canvas.cpp:1094
-#, fuzzy
 msgid "Image doesn't fit on canvas."
-msgstr "Čára se nevejde na plátno."
+msgstr "Obrázek se nevejde na plátno."
 
 #: src/gui/auxiliary/canvas.cpp:1302
 msgid "Text has a font size of 0."
@@ -3182,7 +3165,7 @@ msgstr "Chyba"
 
 #: src/gui/dialogs/mp_change_control.cpp:244
 msgid "Side $side"
-msgstr ""
+msgstr "Strana $side"
 
 #: src/gui/dialogs/mp_create_game.cpp:96
 msgid "Load Game..."
@@ -3191,7 +3174,7 @@ msgstr "Načti hru..."
 #: src/gui/dialogs/network_transmission.cpp:55
 #: src/gui/dialogs/network_transmission.cpp:57 src/hotkeys.cpp:1178
 msgid "unit_byte^B"
-msgstr ""
+msgstr "B"
 
 #: src/gui/dialogs/title_screen.cpp:296
 msgid "Version "
