--- a/po/wesnoth-lib/en_GB.po
+++ b/po/wesnoth-lib/en_GB.po
@@ -7,7 +7,7 @@ msgstr ""
 "Project-Id-Version: en_GB\n"
 "Report-Msgid-Bugs-To: http://bugs.wesnoth.org/\n"
 "POT-Creation-Date: 2011-11-23 14:08+0100\n"
-"PO-Revision-Date: 2011-11-07 15:51-0500\n"
+"PO-Revision-Date: 2011-12-01 19:54-0500\n"
 "Last-Translator: Steven Panek (Espreon) <Majora700@gmail.com>\n"
 "Language-Team: English (British) <http://wiki.wesnoth.org/"
 "EnglishGBTranslation>\n"
@@ -3469,7 +3469,7 @@ msgstr "Rotate Clipboard Clockwise"
 
 #: src/hotkeys.cpp:156
 msgid "Rotate Clipboard Counter-Clockwise"
-msgstr "Rotate Clipboard Counter-Clockwise"
+msgstr "Rotate Clipboard Anticlockwise"
 
 #: src/hotkeys.cpp:158
 msgid "Flip Clipboard Horizontally"
